did stuff for northcode field + geolocation extraction process

--- a/joshscript_aframe/pic3.html
+++ b/joshscript_aframe/pic3.html
@@ -186,7 +186,7 @@
     <div id="cursor-coords">
         <div>E: <span id="cursor-easting">-</span></div>
         <div>N: <span id="cursor-northing">-</span></div>
-    </div>
+    </div>n
     
 
     <script>
