--- a/joshscript_aframe6_floorplanbase/floor_plan_viewer.html
+++ b/joshscript_aframe6_floorplanbase/floor_plan_viewer.html
@@ -1858,13 +1858,13 @@
             // Load all SVG files after a short delay (let floorplans load first)
             setTimeout(() => {
                 const svgFiles = [
-                    'svg_files/camera_positions_0.svg',
-                    'svg_files/camera_positions_1.svg',
-                    'svg_files/camera_positions_2.svg',
-                    'svg_files/camera_positions_3.svg',
-                    'svg_files/camera_positions_4.svg',
-                    'svg_files/camera_positions_5.svg',
-                    'svg_files/camera_positions_6.svg'
+                    '../joshscript_aframe4_svg/svg_output/camera_positions_0.svg',
+                    '../joshscript_aframe4_svg/svg_output/camera_positions_1.svg',
+                    '../joshscript_aframe4_svg/svg_output/camera_positions_2.svg',
+                    '../joshscript_aframe4_svg/svg_output/camera_positions_3.svg',
+                    '../joshscript_aframe4_svg/svg_output/camera_positions_4.svg',
+                    '../joshscript_aframe4_svg/svg_output/camera_positions_5.svg',
+                    '../joshscript_aframe4_svg/svg_output/camera_positions_6.svg'
                 ];
                 
                 svgFiles.forEach((svgFile, index) => {
